# OceanCurrentSimulationSystem

./: .gitignore  OceanSimulation.csproj  README.md  setup_python_csharp_interface.py  startup.bat  startup.sh
.github/workflows/: qodana_code_quality.yml
Documentation/: C#主导的多语言洋流模拟系统项目结构.docx
Documentation/API/: CppCSharpInterop_Test_Instructions.md
Source/: build_cpp.sh
Source/CSharpClient/: .editorconfig  AllApiSmokeTest.cs  CSharpClient.sln  Directory.Build.props  OceanSim.sln  stylecop.ruleset
Source/CSharpClient/Examples/: OceanSimExample.cs
Source/CSharpClient/OceanSim.Core/: Class1.cs  OceanSim.Core.csproj
Source/CSharpClient/OceanSimulation.Application/: OceanSimulation.Application.csproj
Source/CSharpClient/OceanSimulation.Domain/: OceanSimulation.Domain.csproj
Source/CSharpClient/OceanSimulation.Domain/Entities/: GridDataStructure.cs  Particle.cs  PerformanceMetrics.cs
Source/CSharpClient/OceanSimulation.Domain/Interfaces/: IPythonMLEngine.cs
Source/CSharpClient/OceanSimulation.Domain/ValueObjects/: DashboardData.cs  DashboardParameters.cs  DataProcessingParameters.cs  Enums.cs  GeographicCoordinate.cs  GridConfig.cs  OceanDataResult.cs  OceanographicStatistics.cs  ParticleTrackingValueObjects.cs  PerformanceConfig.cs  PhysicalParameters.cs  PollutionDispersionResult.cs  PythonResult.cs  SolverParameters.cs  Vector3D.cs  Vector3F.cs  VectorFieldData.cs  VelocityField3D.cs  Visualization3DParameters.cs  VisualizationParameters.cs  VisualizationResult.cs
Source/CSharpClient/OceanSimulation.Infrastructure/: OceanSimulation.Infrastructure.csproj
Source/CSharpClient/OceanSimulation.Infrastructure/ComputeEngines/: NetCDFParticleInterface.cs  OceanAnimationInterface.cs  OceanDataInterface.cs  OceanStatisticalAnalysis.cs  ParticleAnalysisInterface.cs  PollutionDispersionInterface.cs  PythonEngineClient.cs
Source/CSharpClient/OceanSimulation.Infrastructure/Interop/: EnKFInterop.cs  NetCDFInterop.cs
Source/CSharpClient/OceanSimulation.Infrastructure/Utils/: PythonPathResolve.cs
Source/CSharpClient/OceanSimulation.Presentation.Avalonia/: App.axaml  App.axaml.cs  OceanSimulation.Presentation.Avalonia.csproj  Program.cs  ViewLocator.cs  app.manifest
Source/CSharpClient/OceanSimulation.Presentation.Avalonia/ViewModels/: EnKFConfigViewModel.cs  IndexSelectionViewModel.cs  MainWindowViewModel.cs  ViewModelBase.cs
Source/CSharpClient/OceanSimulation.Presentation.Avalonia/Views/: EnKFConfigWindow.axaml  EnKFConfigWindow.axaml.cs  IndexSelectionWindow.axaml  IndexSelectionWindow.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs
Source/CSharpClient/OceanSimulation.Presentation.WPF/: OceanSimulation.Presentation.WPF.csproj
Source/CSharpClient/PythonTest/PythonTest/: Program.cs
Source/CSharpClient/Tests/: create_test_console.sh
Source/CSharpClient/Tests/OceanDataInterfaceTest/: OceanDataInterfaceTest.csproj  Program.cs  README.md  run_test.sh
Source/CSharpClient/Tests/OceanSimulation.AnalysisDemo/: OceanSimulation.AnalysisDemo.csproj  Program.cs
Source/CSharpClient/Tests/OceanSimulation.AnimationDemo/: Program.cs  (+1 more)
Source/CppCore/: CMakeLists.txt  CppCore.md
Source/CppCore/bindings/csharp/: CppCoreInterop.cs  CppCoreWrapper.cpp  CppCoreWrapper.h  EnKFWrapper.cpp  EnKFWrapper.h  GridDataWrapper.cpp  OceanSimWrapper.cs
Source/CppCore/bindings/python/:  pybind_parallel.cpp  CppCoreWrapper.h  pybind_advection.cpp  pybind_algorithms.cpp  pybind_bindings.h  pybind_current_solver.cpp  pybind_grid.cpp  pybind_main.cpp  pybind_ocean_sim.cpp  pybind_ocean_sim.h  pybind_parallel.cpp  pybind_particle_sim.cpp
Source/CppCore/cmake/: CppCoreConfig.cmake.in
Source/CppCore/include/algorithms/: FiniteDifferenceSolver.h  ParallelComputeEngine.h  RungeKuttaSolver.h  VectorizedOperations.h
Source/CppCore/include/core/: AdvectionDiffusionSolver.h  CurrentFieldSolver.h  ParticleSimulator.h  PerformanceProfiler.h
Source/CppCore/include/data/: DataExporter.h  GridDataStructure.h  MemoryManager.h
Source/CppCore/include/prediction/: EnsembleKalmanFilter.h
Source/CppCore/include/utils/: Logger.h  MathUtils.h  ThreadPool.h
Source/CppCore/src/algorithms/: FiniteDifferenceSolver.cpp  ParallelComputeEngine.cpp  RungeKuttaSolver.cpp  VectorizedOperations.cpp
Source/CppCore/src/core/: AdvectionDiffusionSolver.cpp  CurrentFieldSolver.cpp  ParticleSimulator.cpp  PerformanceProfiler.cpp
Source/CppCore/src/data/: DataExporter.cpp  GridDataStructure.cpp  MemoryManager.cpp
Source/CppCore/src/prediction/: EnsembleKalmanFilter.cpp
Source/CppCore/src/utils/: Logger.cpp  MathUtils.cpp  ThreadPool.cpp
Source/Deployment/Docker/: Dockerfile.python   docker-compose.yml 
Source/PythonEngine/: config.yaml  main.py  requirements.txt  setup.py   simulation_examples.py
Source/PythonEngine/api/: endpoints.py  rest_server.py
Source/PythonEngine/core/: coordinate_transformer.py  cpp_interface.py  data_processor.py  interpolation_engine.py  netcdf_handler.py  quality_controller.py
Source/PythonEngine/output/: current_vectors.dbf  current_vectors.shp  current_vectors.shx
Source/PythonEngine/simulation/: __init__.py  current_simulation_wrapper.py  hybrid_solver.py  particle_tracking_wrapper.py  pollution_dispersion.py
Source/PythonEngine/tests/: inspect_oceansim.py  test_cpp_binding.py
Source/PythonEngine/utils/: chinese_config.py  logging_utils.py  math_utils.py  performance_utils.py
Source/PythonEngine/visualization/: animation_generator.py  field_generators.py  geo_particle_animator.py  improved_geo_particle_animator.py  pollution_diffusion_animator.py  pure_python_particle_animator.py  rendering_engine.py
Source/PythonEngine/wrappers/: geo_animation_wrapper.py  lagrangian.py  lagrangian_particle_wrapper.py  netcdf_particle_wrapper.py  ocean_data_wrapper.py  ocean_wrapper_main.py  particle_validation_fix.py  pollution_dispersion_wrapper.py
Source/Scripts/: build_cpp.bat  build_csharp_bindings.sh  build_python_bindings.sh  install.bat  install.sh  run_performance_tests.py  setup_environment.py
Source/Tools/DataAcquisition/: requirements.txt  setup.sh
(+15 files in other folders)
